--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,8 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root{
-  background-color: white;
-  color: gray;
+:root {
+  font-family: "Inter", sans-serif;
+}
+input[type="text"] {
+  @apply border-2 border-zinc-300 w-full h-10 rounded-md mt-1 px-2;
+}
+label {
+  @apply text-zinc-600 text-sm;
 }
