--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -6,6 +6,7 @@
 
 :root {
   font-family: "Inter", sans-serif;
+  scroll-behavior: smooth;
 }
 input[type="text"] {
   @apply border-2 border-zinc-300 w-full h-10 rounded-md mt-1 px-2;
@@ -16,4 +17,9 @@ label {
 
 .loginBg{
   background-image: url("../assets/bg-vector.avif");
+}
+
+.loginBgBack{
+  background-image: url("../assets/bg-vector.avif");
+  object-position: top;
 }
