--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -8,7 +8,7 @@
   font-family: "Inter", sans-serif;
 }
 input[type="text"] {
-  @apply border-2 border-zinc-300 w-full h-10 rounded-md mt-1 px-2 focus:border-zinc-800 transition-all duration-200 ease-out;
+  @apply border-2 border-zinc-300 w-full h-10 rounded-md mt-1 px-2 focus:border-zinc-800 transition-all duration-200 ease-out outline-none;
 }
 @media (max-width: 1024px) {
   button {
