--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -7,8 +7,11 @@
 :root {
   font-family: "Inter", sans-serif;
 }
-input[type="text"] {
-  @apply border-2 border-zinc-300 w-full h-10 rounded-md mt-1 px-2 focus:border-zinc-800 transition-all duration-200 ease-out outline-none;
+input[type="text"],
+input[type="number"],
+input[type="email"],
+input[type="password"] {
+  @apply border-2 border-zinc-300 w-full h-10 rounded-md mt-1 px-2 focus:border-zinc-800 transition-all duration-200 ease-out outline-none text-zinc-700;
 }
 @media (max-width: 1024px) {
   button {
