--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -6,22 +6,18 @@
 
 :root {
   font-family: "Lato", sans-serif;
+  @apply bg-snow;
 }
 input[type="text"],
 input[type="number"],
 input[type="email"],
 input[type="password"] {
-  @apply border-2 border-zinc-300 w-full h-10 rounded-md mt-1 px-2 focus:border-light-500 transition-all duration-200 ease-out outline-none text-dark-400;
-}
-@media (max-width: 1024px) {
-  button {
-    pointer-events: none !important;
-  }
+  @apply border-2 border-zinc-200 w-full h-10 rounded-md mt-1 px-2 focus:border-light-500 transition-all duration-200 ease-out outline-none text-dark-400;
 }
 .loginBg {
   background-image: url("../assets/bg-phone.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  @apply h-screen
+  @apply h-screen;
 }
