--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -11,6 +11,9 @@
 .form-input {
   @apply border-2 border-zinc-200 w-full h-10 rounded-md mt-1 px-2 focus:border-light-500 transition-all duration-200 ease-out outline-none text-dark-400 overflow-hidden;
 }
+.login-container {
+  @apply backdrop-blur-sm bg-slate-800/40 text-white mx-auto rounded-lg py-8 px-4 flex flex-col gap-y-2 text-center w-login-form;
+}
 .loginBg {
   background-image: url("../assets/bg-phone.jpg");
   background-repeat: no-repeat;
