--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -17,6 +17,10 @@
 .form-input-shape {
   @apply px-2 focus-visible:outline-none w-full h-full;
 }
+
+.login-pages-container {
+  @apply h-screen grid place-items-center lg:grid-cols-3;
+}
 .login-container {
   @apply backdrop-blur-sm bg-slate-800/40 text-white mx-auto rounded-lg py-8 px-4 flex flex-col gap-y-2 text-center w-login-form;
 }
