--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -19,15 +19,14 @@
 }
 
 .login-pages-container {
+  /* wrapper for all page */
   @apply h-screen grid place-items-center lg:grid-cols-3;
 }
 .login-container {
-  @apply backdrop-blur-sm bg-slate-800/40 text-white mx-auto rounded-lg py-8 px-4 flex flex-col gap-y-2 text-center w-login-form;
+  /* login cell container */
+  @apply w-full relative grid place-items-center h-full;
 }
-.loginBg {
-  background-image: url("../assets/bg-phone.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  @apply h-screen;
+.login-form-container {
+  /* glass form container */
+  @apply backdrop-blur-sm bg-slate-800/40 text-white mx-auto rounded-lg py-8 px-4 flex flex-col gap-y-2 text-center w-login-form;
 }
