--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -40,3 +40,11 @@
   /* glass form container */
   @apply backdrop-blur-sm bg-slate-800/40 text-white mx-auto rounded-lg py-8 px-4 flex flex-col gap-y-2 text-center w-login-form;
 }
+
+.grid-character {
+  grid-template-columns: 6rem auto;
+}
+
+.path-triangle {
+  clip-path: polygon(0 50%, 100% 100%, 100% 0);
+}
