--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -7,6 +7,7 @@
 :root {
   font-family: "Lato", sans-serif;
   @apply bg-snow;
+  scroll-behavior: smooth;
 }
 .form-input {
   @apply border-2 border-zinc-200 w-full h-10 rounded-md mt-1 px-2 focus:border-light-500 transition-all duration-200 ease-out outline-none text-dark-400;
